Criação do card desempenho homepage

--- a/index.html
+++ b/index.html
@@ -81,6 +81,39 @@
                         </div>
                         <!-- Fim Saldo Disponível -->
 
+                        <!-- Desempenho -->
+                        <div class="bg-medium-grey rounded-5 w-75 py-4 px-4 d-flex flex-column justify-content-center shadow-sm">
+                            <div class="mb-4">
+                                <div class="d-flex gap-2 align-items-center">
+                                    <i class="bi bi-bar-chart fs-4"></i>
+                                    <p class="mb-0 fw-bolder">Desempenho</p>
+                                </div>
+                                <p class="mb-0">Junho (mês atual)</p>
+                            </div>
+                            <div class="mb-2">
+                                <p class="mb-0 fw-bolder medium-text mb-1">Receitas</p>
+                                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar progress-bar-striped bg-myprimary progress-bar-animated" style="width: 90%"></div>
+                                </div>
+                                <p class="small-text mt-1">10% a mais que o mês anterior</p>
+                            </div>
+                            <div class="mb-2">
+                                <p class="mb-0 fw-bolder medium-text mb-1">Investimentos</p>
+                                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar progress-bar-striped bg-myprimary progress-bar-animated" style="width: 60%"></div>
+                                </div>
+                                <p class="small-text mt-1">10% a mais que o mês anterior</p>
+                            </div>
+                            <div class="mb-2">
+                                <p class="mb-0 fw-bolder medium-text mb-1">Despesas</p>
+                                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                                    <div class="progress-bar progress-bar-striped bg-myprimary progress-bar-animated" style="width: 40%"></div>
+                                </div>
+                                <p class="small-text mt-1">10% a mais que o mês anterior</p>
+                            </div>
+                        </div>
+                        <!-- Final Desempenho -->                       
+
                     </div>
                     <!-- Fim Coluna 1 -->
 
