Adição do card de ultimas atividades na home page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <!-- Fim Menu -->
 
             <!-- Conteúdo -->
-            <div class="col py-5">
+            <div class="col py-4">
 
                 <!-- Greeting -->
-                <div class="row mb-4">
+                <div class="row mb-4 mx-0">
                     <div class="col  px-0 ">
                         <p class="title text-dark-grey m-0">Olá, Adriano</p>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="row">
 
                     <!-- Coluna 1 -->
-                    <div class="col px-0">
+                    <div class="col pe-5">
 
                         <!-- Botões -->
                         <div class="d-flex gap-3 mb-4">
@@ -82,7 +82,7 @@
                         <!-- Fim Saldo Disponível -->
 
                         <!-- Desempenho -->
-                        <div class="bg-medium-grey rounded-5 w-75 py-4 px-4 d-flex flex-column justify-content-center shadow-sm">
+                        <div class="bg-medium-grey rounded-5 py-4 px-4 d-flex flex-column justify-content-center shadow-sm">
                             <div class="mb-4">
                                 <div class="d-flex gap-2 align-items-center">
                                     <i class="bi bi-bar-chart fs-4"></i>
@@ -118,7 +118,123 @@
                     <!-- Fim Coluna 1 -->
 
                     <div class="col px-0">
-                        
+                        <div class="bg-medium-grey rounded-5 w-75 py-4 px-4 d-flex flex-column justify-content-center shadow-sm">
+                            <div class="mb-4">
+                                <div class="d-flex gap-2 align-items-center">
+                                    <i class="bi bi-wallet2 fs-4"></i>
+                                    <p class="mb-0 fw-bolder">Últimas Atividades</p>
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <p class="medium-text my-3 fw-medium">Hoje, 26 de junho</p>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <p class="medium-text my-3 fw-medium">Ontem, 25 de junho</p>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <p class="medium-text my-3 fw-medium">Segunda, 24 de junho</p>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div class="d-flex gap-3 align-items-center">
+                                        <div class="rounded-circle bg-myprimary activity-icon">
+                                        </div>
+                                        <div>
+                                            <p class="m-0 fw-semibold large-text">Nike Store</p>
+                                            <p class="small-text fw-medium m-0">Despesa</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p class="m-0 large-text">-100,00</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- Fim Dash -->
