--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="container-fluid bg-light-grey">
+<body class="bg-light-grey">
     
-    
-        <div class="row">
-
-            <!-- Menu -->
-            <div class="col-1 me-5">
+        <!-- Menu -->
+        <div class="fixed-left mx-4">
                 <header class="min-vh-100 d-flex flex-column justify-content-center ">
                     <nav class="bg-black-grey text-light d-flex flex-column align-items-center gap-3 shadow py-6 rounded-pill">
                         <i class="bi bi-house item-menu-selected px-3 py-4" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Página inicial" data-bs-custom-class="custom-tooltip"
@@ -25,11 +22,13 @@
                         <i class="bi bi-person px-3 py-4" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Meu perfil" data-bs-custom-class="custom-tooltip"></i>
                     </nav>
                 </header>
-            </div>
-            <!-- Fim Menu -->
+        </div>
+        <!-- Fim Menu -->
 
-            <!-- Conteúdo -->
-            <div class="col py-4">
+    <div class="container px-7">
+
+        <!-- Conteúdo -->
+        <div class="py-4">
 
                 <!-- Greeting -->
                 <div class="row mb-4 mx-0">
@@ -240,10 +239,11 @@
                 <!-- Fim Dash -->
 
 
-            </div>
-            <!-- Fim Conteúdo -->
-
         </div>
+        <!-- Fim Conteúdo -->
+
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
