Alterando width card ultimas atividades

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <!-- Fim Coluna 1 -->
 
                     <div class="col px-0">
-                        <div class="bg-medium-grey rounded-5 w-75 py-4 px-4 d-flex flex-column justify-content-center shadow-sm">
+                        <div class="bg-medium-grey rounded-5 py-4 px-4 d-flex flex-column justify-content-center shadow-sm">
                             <div class="mb-4">
                                 <div class="d-flex gap-2 align-items-center">
                                     <i class="bi bi-wallet2 fs-4"></i>
