Adição de sombras, hover nos botões principais e bg do body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="bg-light-grey">
+<body class="bg-light">
 
     <div class="bg-black-grey sticky-top shadow-sm border w-100 mb-lg-5" data-bs-theme="dark">
         <nav class="w-100 container navbar navbar-expand-lg">
@@ -46,7 +46,7 @@
                 <div class="row">
 
                     <!-- Coluna 1 -->
-                    <div class="col-md-6 mb-4 mb-lg-0">
+                    <div class="col-md-6 mb-4 mb-lg-0 main-btns">
 
                         <!-- Botões -->
                         <div class="d-flex gap-3 mb-4 flex-wrap">
@@ -75,7 +75,7 @@
                         <!-- Fim Botões -->
 
                         <!-- Saldo Disponível -->
-                        <div class="bg-myprimary rounded-5 py-4 px-4 d-flex flex-column justify-content-center mb-4 ">
+                        <div class="bg-myprimary rounded-5 py-4 px-4 d-flex flex-column justify-content-center mb-4 shadow-sm">
                             <p class="mb-0">Saldo Disponível</p>
                             <p class="fw-bolder fs-1 mb-0">R$ 100,00</p>
                         </div>
